--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,19 +1,16 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
-
-html,
-body,
 #root {
-  height: 100%;
+  max-width: 100%;
   margin: 0;
-  padding: 0;
+  text-align: center;
 }
 
-.logo {
+html,
+body {
+  height: 100%;
+  justify-content: center;
+}
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -46,5 +43,5 @@ body,
 }
 
 .read-the-docs {
-  color: #888;
-}
+  color: #888; */
+/* } */
